Debugging keypoint extraction pipeline, several center maps

--- a/notebooks/ModelBench.ipynb
+++ b/notebooks/ModelBench.ipynb
@@ -3,30 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "visible-treaty",
+   "id": "clear-microwave",
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "from argparse import Namespace\n",
-    "import json"
+    "import json\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-third",
+   "id": "first-eight",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.train import DataModule, _to_image"
+    "from scripts.train import DataModule, _to_image, KeypointModule"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-valuable",
+   "id": "monthly-prince",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,19 +36,20 @@
     "module = DataModule(Namespace(train='/home/ken/data/cups_train/', val='/home/ken/data/cups_test/', batch_size=1, workers=1, pool=32), keypoint_config=keypoint_config)\n",
     "module.setup('fit')\n",
     "\n",
-    "train_loader = module.train_dataloader()\n",
-    "train_iterator = iter(train_loader)"
+    "dataloader = module.val_dataloader()\n",
+    "print(dataloader)\n",
+    "train_iterator = iter(dataloader)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "killing-bullet",
+   "id": "considered-parish",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "def resize(target, width=640, height=360):\n",
+    "def resize(target, width=320, height=180):\n",
     "    return cv2.resize(target, (width, height))\n",
     "    "
    ]
@@ -55,7 +57,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "soviet-ceramic",
+   "id": "composed-charleston",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "module = KeypointModule.load_from_checkpoint('../lightning_logs/version_0/checkpoints/epoch=15-step=33567.ckpt', keypoint_config=keypoint_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "mineral-vacuum",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = module.model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "available-cancellation",
    "metadata": {
     "tags": []
    },
@@ -68,8 +90,8 @@
     "for i in range(2):\n",
     "    for j in range(2):\n",
     "        axis = plt.subplot2grid((2, 2), loc=(i, j))\n",
-    "        axis.imshow(image)\n",
-    "        axis.imshow(resize(target[0, i * 2 + j].numpy()), alpha=0.5)\n",
+    "        axis.imshow(resize(image))\n",
+    "        axis.imshow(resize(target[0, i * 2 + j].numpy()), alpha=0.7)\n",
     "        plt.axis('off')\n",
     "plt.tight_layout()\n",
     "pass"
@@ -78,17 +100,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "descending-resource",
+   "id": "crazy-bookmark",
    "metadata": {},
    "outputs": [],
    "source": [
+    "with torch.no_grad():\n",
+    "    heatmap_p, depth_p, centers_p = model(frame)\n",
+    "    heatmap_p = torch.sigmoid(heatmap_p)\n",
+    "\n",
     "plt.figure(figsize=(14, 8))\n",
+    "image = _to_image(frame[0].numpy())\n",
     "for i in range(2):\n",
     "    for j in range(2):\n",
     "        axis = plt.subplot2grid((2, 2), loc=(i, j))\n",
-    "        axis.imshow(image)\n",
-    "        axis.imshow(resize(target[0, i * 2 + j].numpy()), alpha=0.5)\n",
-    "        axis.imshow(resize((np.abs(centers[0].numpy()) > 1e-1).any(axis=0).astype(np.float32)), alpha=0.5, vmin=0.0, vmax=1.0)\n",
+    "        axis.imshow(resize(image))\n",
+    "        axis.imshow(resize(heatmap_p[0, i * 2 + j].detach().numpy()), alpha=0.7, vmin=0.0, vmax=1.0)\n",
     "        plt.axis('off')\n",
     "plt.tight_layout()\n",
     "pass"
@@ -97,24 +123,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loved-swing",
+   "id": "742832fc-bb90-4de5-8360-1af36bb7f8d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectors = centers.numpy()[0]\n",
-    "indices = np.zeros((2, 180, 320), dtype=np.uint16)\n",
-    "for i in range(180):\n",
-    "    for j in range(320):\n",
-    "        indices[:, i, j] = [j, i]\n",
-    "plt.figure(figsize=(12, 10))\n",
-    "plt.quiver(vectors[0], vectors[1], units='xy', scale_units='xy', scale=1.0)\n",
-    "plt.show()\n"
+    "with torch.no_grad():\n",
+    "    heatmap_p, depth_p, centers_p = model(frame)\n",
+    "\n",
+    "plt.figure(figsize=(14, 8))\n",
+    "image = _to_image(frame[0].numpy())\n",
+    "plt.imshow(resize(depth_p[0, 3].detach().numpy()), alpha=0.7, vmin=0.0, vmax=2.0)\n",
+    "plt.axis('off')\n",
+    "plt.tight_layout()\n",
+    "pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disciplinary-parker",
+   "id": "sacred-cotton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,55 +154,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "micro-abuse",
+   "id": "indonesian-steam",
    "metadata": {},
    "outputs": [],
    "source": [
+    "vectors = centers.numpy()[0]\n",
     "norms = np.linalg.norm(vectors, axis=0)\n",
-    "where_non_zero = target[0].sum(axis=0) > 0.5\n",
+    "where_non_zero = np.abs(norms) > 1e-1\n",
+    "gt_centers = np.zeros((2, pixel_indices.shape[1], pixel_indices.shape[2]), dtype=np.float32)\n",
+    "gt_centers[:, where_non_zero] = pixel_indices[:, where_non_zero] + vectors[:, where_non_zero]\n",
+    "\n",
+    "where_heatmap_non_zero = heatmap_p[0].numpy().sum(axis=0) > 0.1\n",
     "p_centers = np.zeros((2, pixel_indices.shape[1], pixel_indices.shape[2]), dtype=np.float32)\n",
-    "p_centers[:, where_non_zero] = pixel_indices[:, where_non_zero] + vectors[:, where_non_zero]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "narrative-stanford",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "p_centers[:, where_heatmap_non_zero] = pixel_indices[:, where_heatmap_non_zero] + centers_p[0].detach().numpy()[:, where_heatmap_non_zero]\n",
+    "\n",
+    "figure = plt.figure(figsize=(10, 5))\n",
     "dotted_image = cv2.resize(image.copy(), (320, 180))\n",
-    "for point in p_centers[:, where_non_zero].transpose():\n",
+    "for point in gt_centers[:, where_non_zero].transpose():    \n",
     "    cv2.circle(dotted_image, (point[0], point[1]), 2, (255, 0, 0), -1)\n",
-    "plt.imshow(dotted_image)"
+    "    \n",
+    "dotted_image_pred = cv2.resize(image.copy(), (320, 180))\n",
+    "for point in p_centers[:, where_non_zero].transpose():    \n",
+    "    cv2.circle(dotted_image_pred, (point[0], point[1]), 2, (255, 0, 0), -1)\n",
+    "\n",
+    "axis = plt.subplot2grid((1, 2), loc=(0, 0))\n",
+    "axis.imshow(dotted_image)\n",
+    "plt.axis('off')\n",
+    "\n",
+    "axis = plt.subplot2grid((1, 2), loc=(0, 1))\n",
+    "axis.imshow(dotted_image_pred)\n",
+    "plt.axis('off')\n",
+    "pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "central-contemporary",
+   "id": "hindu-tuesday",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert p_centers[:, where_non_zero].shape[1] > 3\n",
-    "center_points = np.unique(p_centers[:, where_non_zero].round().astype(np.int32), axis=1)\n",
-    "assert center_points.shape[1] >= 1 and center_points.shape[1] < 5"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c4b265-c08f-41c6-9970-fe0a4c340379",
+   "id": "essential-receiver",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "p_centers[:, where_non_zero].shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa0aa22-b817-4bf3-a59b-e7eb57ce6ad4",
+   "id": "marine-alliance",
    "metadata": {},
    "outputs": [],
    "source": []
